Made a temporary coming soon overlay

--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
 <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body class="home">
+  <div id="coming-soon">
+    <h1>Coming Soon!</h1>
+  </div>
   <div class="container">
     <img src="images/Cover.png" alt="home-logo" id="home-logo">
-    <div class="home-nav">
+    <!-- <div class="home-nav">
       <a href="/about">About</a>
       <a href="/setup">Setup</a>
       <a href="/community">Community</a>
       <a href="/contact">Contact</a>
     </div>
-    <img src="images/jukemaster.png" alt="jukemaster" id="jukemaster">
+    <img src="images/jukemaster.png" alt="jukemaster" id="jukemaster"> -->
   </div>
 </body>
 </html>
