--- a/community.html
+++ b/community.html
@@ -13,25 +13,29 @@
 <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <div class="container">
+  <div class="community container">
     <div class="nav">
-        <a href="/">Home</a>
-        <a href="/about">About</a>
-        <a href="/setup">Setup</a>
-        <a href="/community">Community</a>
-        <a href="/contact">Contact</a>
+      <a href="/">Home</a>
+      <a href="/about">About</a>
+      <a href="/setup">Setup</a>
+      <a href="/community">Community</a>
+      <a href="/contact">Contact</a>
     </div>
-    <!-- The Rage Nation has been formed and can be accessed via this code "ZKkGpORs5o3". "Whether you are for the Alliance or if you are for the Horde..." Welcome to the Rage Nation! -->
-    <p>Want a hat? Just fill out this form for info</p>
+    <h1>Community</h1>
+    <p>The Rage Nation has been formed and can be accessed via this code "ZKkGpORs5o3". "Whether you are for the Alliance or if you are for the Horde..." Welcome to the Rage Nation!</p>
     <form action="https://formsubmit.co/ragingbeardedscot@gmail.com" method="POST">
-        <input type="text" name="name" placeholder="Name" required>
-        <input type="email" name="email" placeholder="Email Address" required>
-        <textarea name="message" placeholder="Enter your message"></textarea>
-        <input type="text" name="_honey" style="display:none">
-        <input type="hidden" name="_next" value="https://ragingbeardedscot.com/thanks">
-        <input type="hidden" name="_subject" value="New form submission!">
-        <input type="hidden" name="_captcha" value="false">
-        <button type="submit">Send</button>
+      <h2>Want a hat? Just fill out this form for info</h2>
+      <label for="name">Name</label>
+      <input type="text" name="name" placeholder="Enter your name" required>
+      <label for="email">Email</label>
+      <input type="email" name="email" placeholder="Enter your email address" required>
+      <label for="message">Message</label>
+      <textarea name="message" placeholder="Enter your message"></textarea>
+      <input type="text" name="_honey" style="display:none">
+      <input type="hidden" name="_next" value="https://ragingbeardedscot.com/thanks">
+      <input type="hidden" name="_subject" value="New form submission!">
+      <input type="hidden" name="_captcha" value="false">
+      <button type="submit">Send Message</button>
    </form>
   </div>
 </body>
