--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
-<body class="test">
+<body>
   <div class="hero">
     <h1>RagingBeardedScot</h1>
     <h2>We Rage Because We Care</h2>
@@ -18,7 +18,6 @@
     <div class="nav">
       <a href="#about">About</a>
       <a href="#setup">Setup</a>
-      <a href="#community">Community</a>
       <a href="#contact">Contact</a>
     </div>
     <div id="twitch-embed"></div>
@@ -27,18 +26,22 @@
     <div class="container">
         <h3>About Me</h3>
         <p>Hey Rage Nation, more commonly referred to as “The Naish!” My name is Cam and I am your RagingBeardedScot. Other names I've been called include the “Maestro of Rage”, or the “Fanatic of Fury”, or even the “Connoisseur of Rancor”, but regardless the name, I can always be found flying off the handle while playing video games.
-            
+
         My gaming roots have been firmly fixed in World of Warcraft since 2006 where I main a Feral/Guardian Druid and spend most time pushing PVE content and collection farming. Outside of WoW you can catch me parachuting to my demise in Warzone, shrieking at the unexpected Widow headshot in Overwatch, or testing out whatever new games fall on my path and pique my interest. 
         
         You can catch me from 12 - 5 PM PST every day at twitch.tv/RagingBeardedScot where my trusty side kick Pug Lord and I use our platform to create fun and exciting content for the gaming community! Can't wait to see you crazy gamers on the ground and remember.... we rage, because we care!</p>
     </div>
   </div>
-  <div id="setup" class="setup">
+  <div id="setup">
     <div class="container">
         <div class="flex">
             <div>
-                <h2>Gaming Rig</h2>
-                <img src="images/Screens Rage Den.png" alt="gaming rig">
+                <h4>Gaming Rig</h4>
+                <picture>
+                    <source srcset="images/Screens-Rage-Den.webp" type="image/webp">
+                    <source srcset="images/Screens-Rage-Den.png" type="image/png">
+                    <img src="images/Screens-Rage-Den.png" alt="gaming rig" loading="lazy">
+                </picture>
                 <table>
                     <tr>
                         <th>Part Type</th>
@@ -79,8 +82,12 @@
                 </table>
             </div>
             <div>
-                <h2>Peripherals</h2>
-                <img src="images/DSC00355.JPG" alt="peripherals">
+                <h4>Peripherals</h4>
+                <picture>
+                    <source srcset="images/DSC00355.webp" type="image/webp">
+                    <source srcset="images/DSC00355.JPG" type="image/jpeg">
+                    <img src="images/DSC00355.JPG" alt="peripherals" loading="lazy">
+                </picture>
                 <table>
                     <tr>
                         <th>Part Type</th>
@@ -127,7 +134,7 @@
         </div>
     </div>
   </div>
-  <div id="community">
+  <div id="contact">
     <div class="container">
         <p>Interested in joining our in game community? The Rage Nation has been formed and can be accessed via this code "ZKkGpORs5o3". "Whether you are for the Alliance or if you are for the Horde..." Welcome to the Rage Nation!</p>
         <form action="https://formsubmit.co/ragingbeardedscot@gmail.com" method="POST">
@@ -139,25 +146,24 @@
             <label for="message">Message</label>
             <textarea name="message" placeholder="Enter your message"></textarea>
             <input type="text" name="_honey" style="display:none">
-            <input type="hidden" name="_next" value="https://ragingbeardedscot.com/thanks">
+            <input type="hidden" name="_next" value="https://ragingbeardedscot.com/">
             <input type="hidden" name="_subject" value="New form submission!">
             <input type="hidden" name="_captcha" value="false">
             <button type="submit">Send Message</button>
          </form>
     </div>
   </div>
-  <footer id="contact" class="container">
+  <footer class="container">
     <p>For business inquires email me at <a href="mailto:ragingbeardedscot@gmail.com">ragingbeardedscot@gmail.com</a></p>
     <p>Copyright &copy; 2022 RagingBeardedScot</p>
-    <p>Site designed and developed by <a href="https://linkedin.com/in/pcdevonshire" target="_blank">Preston Devonshire</a></p>
         <div class="icons">
-            <a href="https://www.twitch.tv/ragingbeardedscot" target="_blank"><img src="images/twitch.png" alt="twitch"></a>
-            <a href="https://twitter.com/ragingbeardscot/" target="_blank"><img src="images/twitter.png" alt="twitter"></a>
-            <a href="https://www.youtube.com/c/ragingbeardedscot" target="_blank"><img src="images/youtube.png" alt="youtube"></a>
-            <img src="images/logo.jpg" alt="logo" onclick="topFunction()">
-            <a href="https://www.instagram.com/ragingbeardedscot/" target="_blank"><img src="images/instagram.png" alt="instagram"></a>
-            <a href="https://www.tiktok.com/@ragingbeardedscot" target="_blank"><img src="images/tik-tok.png" alt="tiktok"></a>
-            <a href="https://discord.gg/6Tzw4TZqkf" target="_blank"><img src="images/discord.png" alt="discord"></a>
+            <a href="https://www.twitch.tv/ragingbeardedscot" target="_blank"><img src="images/twitch.png" alt="twitch" loading="lazy"></a>
+            <a href="https://twitter.com/ragingbeardscot/" target="_blank"><img src="images/twitter.png" alt="twitter" loading="lazy"></a>
+            <a href="https://www.youtube.com/c/ragingbeardedscot" target="_blank"><img src="images/youtube.png" alt="youtube" loading="lazy"></a>
+            <img src="images/logo.jpg" alt="logo" onclick="topFunction()" loading="lazy">
+            <a href="https://www.instagram.com/ragingbeardedscot/" target="_blank"><img src="images/instagram.png" alt="instagram" loading="lazy"></a>
+            <a href="https://www.tiktok.com/@ragingbeardedscot" target="_blank"><img src="images/tik-tok.png" alt="tiktok" loading="lazy"></a>
+            <a href="https://discord.gg/6Tzw4TZqkf" target="_blank"><img src="images/discord.png" alt="discord" loading="lazy"></a>
         </div>
   </footer>
   <!-- Twitch embed -->
