Replaced twitch embed with youtube embed

--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
       <a href="#setup">Setup</a>
       <a href="#contact">Contact</a>
     </div>
-    <div id="twitch-embed"></div>
+    <iframe width="940" height="480" src="https://www.youtube-nocookie.com/embed/videoseries?list=UUNdJfQFChcqhG6cF0SsCGfQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div id="about">
     <div class="container">
