--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body class="home">
-  <div id="coming-soon">
-    <h1>Coming Soon!</h1>
-  </div>
+  <iframe src="https://shattereddisk.github.io/rickroll/rickroll.mp4"></iframe>
 </body>
 </html>
