--- a/test.html
+++ b/test.html
@@ -20,7 +20,6 @@
       <a href="#setup">Setup</a>
       <a href="#contact">Contact</a>
     </div>
-    <iframe width="940" height="480" src="https://www.youtube-nocookie.com/embed/videoseries?list=UUNdJfQFChcqhG6cF0SsCGfQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div id="about">
     <div class="container">
@@ -166,5 +165,12 @@
             <a href="https://discord.gg/6Tzw4TZqkf" target="_blank"><img src="images/discord.png" alt="discord" loading="lazy"></a>
         </div>
   </footer>
+  <script type="text/javascript">
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+        document.body.scrollTop = 0; // For Safari
+        document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+    }
+  </script>
 </body>
 </html>
