Hat info changes

--- a/index.html
+++ b/index.html
@@ -82,10 +82,6 @@
                             <td>PSU</td>
                             <td>RMx 850 W 80+ Gold</td>
                         </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                        </tr>
                     </table>
                 </div>
                 <div>
@@ -145,13 +141,14 @@
         <div class="container">
             <p>Interested in joining our in game community? The Rage Nation has been formed and can be accessed via this code "ZKkGpORs5o3". "Whether you are for the Alliance or if you are for the Horde..." Welcome to the Rage Nation!</p>
             <form action="https://formsubmit.co/ragingbeardedscot@gmail.com" method="POST">
-                <h2>Want a hat? Just fill out this form for info</h2>
+                <h2>Want a <a href="images/hat.png" target="_blank" id="hat-link">hat</a>? Just fill out this form!</h2>
+                <span>*Hats cost $35 + Shipping & Tax</span>
                 <label for="name">Name</label>
                 <input type="text" name="name" placeholder="Enter your name" required>
                 <label for="email">Email</label>
                 <input type="email" name="email" placeholder="Enter your email address" required>
-                <label for="message">Message</label>
-                <textarea name="message" placeholder="Enter your message"></textarea>
+                <label for="message">Hat info</label>
+                <textarea name="message" placeholder="Enter your custom hat text"></textarea>
                 <input type="text" name="_honey" style="display:none">
                 <input type="hidden" name="_next" value="https://ragingbeardedscot.com/">
                 <input type="hidden" name="_subject" value="New form submission!">
