--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             My gaming roots have been firmly fixed in World of Warcraft since 2006 where I main a Feral/Guardian Druid and spend most time pushing PVE content and collection farming. Outside of WoW you can catch me parachuting to my demise in Warzone, shrieking at the unexpected Widow headshot in Overwatch, or testing out whatever new games fall on my path and pique my interest. 
             
-            You can catch me from 12 - 5 PM PST every day at twitch.tv/RagingBeardedScot where my trusty side kick Pug Lord and I use our platform to create fun and exciting content for the gaming community! Can't wait to see you crazy gamers on the ground and remember.... we rage, because we care!</p>
+                You can catch me at <a href="https://www.youtube.com/ragingbeardedscot" target="_blank">youtube.com/RagingBeardedScot</a> where my trusty side kick Pug Lord and I use our platform to create fun and exciting content for the gaming community! Can't wait to see you crazy gamers on the ground and remember.... we rage, because we care!</p>
         </div>
     </div>
     <div id="setup">
