--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class="nav">
             <a href="#about">About</a>
             <a href="#setup">Setup</a>
+            <a href="https://www.twitch.tv/ragingbeardedscot/schedule" target="_blank">Schedule</a>
             <a href="#contact">Contact</a>
         </div>
     </div>
@@ -32,9 +33,18 @@
 
             My gaming roots have been firmly fixed in World of Warcraft since 2006 where I main a Feral/Guardian Druid and spend most time pushing PVE content and collection farming. Outside of WoW you can catch me parachuting to my demise in Warzone, shrieking at the unexpected Widow headshot in Overwatch, or testing out whatever new games fall on my path and pique my interest. 
             
-                You can catch me at <a href="https://www.youtube.com/ragingbeardedscot" target="_blank">youtube.com/RagingBeardedScot</a> where my trusty side kick Pug Lord and I use our platform to create fun and exciting content for the gaming community! Can't wait to see you crazy gamers on the ground and remember.... we rage, because we care!</p>
+                You can catch me at <a href="https://www.twitch.tv/ragingbeardedscot" target="_blank">twitch.tv/ragingbeardedscot</a> where my trusty side kick Pug Lord and I use our platform to create fun and exciting content for the gaming community! Can't wait to see you crazy gamers on the ground and remember.... we rage, because we care!</p>
         </div>
     </div>
+    <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
+    <div id="twitch-embed"></div>
+    <script type="text/javascript">
+    var options = {
+        channel: "ragingbeardedscot"
+    };
+    var player = new Twitch.Player("twitch-embed", options);
+    player.setVolume(0.5);
+    </script>
     <div id="setup">
         <div class="container">
             <div class="flex">
